# LifeCalculator

./: .gitignore  CMakeLists.txt  Dockerfile
backend/: CMakeLists.txt
backend/app/: CMakeLists.txt  main.cpp
backend/expression/: CMakeLists.txt  bit.cpp  bit.h  expression.cpp  expression.h  parser.cpp  parser.h
backend/expression/tests/: bit.cpp  expression.cpp  parser.cpp
backend/life/: CMakeLists.txt  board.cpp  board.h  create.cpp  create.h  rle.cpp  rle.h  types.cpp  types.h
backend/life/tests/: create.cpp  rle.cpp  types.cpp
backend/utils/: CMakeLists.txt  parser.cpp  parser.h
backend/utils/tests/: parser.cpp
backend/websocket/: CMakeLists.txt  websocket.cpp  websocket.h
life/: CMakeLists.txt  board.cpp  board.h  create.cpp  create.h  rle.cpp  rle.h  types.cpp  types.h
life/tests/: board.cpp  create.cpp  rle.cpp  types.cpp
system_tests/: test_backend.py
